[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Main_Menu.gd" type="Script" id=1]
[ext_resource path="res://font/8bit.tres" type="DynamicFont" id=2]
[ext_resource path="res://music/calm.ogg" type="AudioStream" id=3]

[node name="Main Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Continue" type="Button" parent="."]
margin_left = 435.0
margin_top = 197.116
margin_right = 526.0
margin_bottom = 231.116
custom_fonts/font = ExtResource( 2 )
text = "Continue"
flat = true

[node name="New Game" type="Button" parent="."]
margin_left = 435.0
margin_top = 231.493
margin_right = 526.0
margin_bottom = 265.493
custom_fonts/font = ExtResource( 2 )
text = "New Game"
flat = true

[node name="Volume" type="Button" parent="."]
margin_left = 436.951
margin_top = 257.827
margin_right = 527.951
margin_bottom = 291.827
custom_fonts/font = ExtResource( 2 )
text = "Volume:"
flat = true

[node name="HSlider" type="HSlider" parent="Volume"]
margin_left = -37.6306
margin_top = 37.0546
margin_right = 130.369
margin_bottom = 53.0546
max_value = 125.0
step = 10.0
value = 100.0
tick_count = 10
ticks_on_borders = true

[node name="Quit Game" type="Button" parent="."]
margin_left = 436.951
margin_top = 344.941
margin_right = 527.951
margin_bottom = 378.941
custom_fonts/font = ExtResource( 2 )
text = "Quit Game"
flat = true

[node name="Graphics" type="Button" parent="."]
margin_left = 424.427
margin_top = 320.865
margin_right = 544.427
margin_bottom = 340.865
custom_fonts/font = ExtResource( 2 )
text = "Graphics:Fancy"
flat = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true

[connection signal="button_down" from="Continue" to="." method="_on_Continue_button_down"]
[connection signal="button_down" from="New Game" to="." method="_on_New_Game_button_down"]
[connection signal="value_changed" from="Volume/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="button_down" from="Quit Game" to="." method="_on_Quit_Game_button_down"]
[connection signal="button_down" from="Graphics" to="." method="_on_Button_button_down"]
